--- a/PC/html/new/search.html
+++ b/PC/html/new/search.html
@@ -41,13 +41,20 @@
 			}
 		})
 
+		// 210118 수정
 		// 키워드
 		$("input[name='searchTerm']").on("change keyup paste", function(){
 			$('.form_search_list_wrap').addClass('active');
 		});
-		$("input[name='searchTerm']").focusout(function(){
-			$('.form_search_list_wrap').removeClass('active');
+
+		
+		var obj = $('.form_search_list_wrap');
+		obj.click(function(){
+			alert('asd');
+			obj.not(this).removeClass('active');
 		});
+		
+	
 
 		// 인기검색어 슬라이드
 		$('.popular_search_wrap .bxslider').bxSlider({
@@ -68,8 +75,21 @@
 	      $(".popular_search_wrap").hide();
 	    });
 
+		// 210118 수정
+	    // 검색레이어 슬라이드 
+	    $('.form_search_list_wrap .bxslider .form_searh_list_slide').bxSlider({
 
-	});
+		    controls:true,
+		    slideWidth:424,
+		    infiniteLoop: false,
+		    touchEnabled:false,
+            pager: true,
+            pagerType: 'short',
+            pagerShortSeparator: '',
+		});
+
+});
+	
 </script>
 
 <body>
@@ -137,62 +157,246 @@
 					</div>
 
 					<!-- 201221 키워드 S -->
+					<!-- 210118 슬라이드 수정 : S -->
 					<div class="form_search_list_wrap">
-						<ul class="form_search_list">
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼	대한민국 & 독일 수교 20주년 한정판</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 대한민국 & 독일 수교 20주년 한정판 리뉴얼	대한민국 & 독일 수교 20주년 한정판</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<li class="items">
-								<a href="javascript:;" class="link">
-									<div>
-										<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
-										<p class="price">25,000원</p>
-									</div>
-									<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
-								</a>
-							</li>
-							<div class="form_search_list_page">
-								<a href="" class="arr prev first"></a>
-								<a href="" class="active">1</a>
-								<a href="" class="">5</a>
-								<a href="" class="arr next"></a>
-							</div>
-						</ul>
-
+						<div class="bxslider">			
+							<div class="form_searh_list_slide">		
+								<!-- list 반복 -->
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+								<ul class="form_search_list">
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+									<li class="items">
+										<a href="javascript:;" class="link">
+											<span class="text_wrap">
+												<p class="texts">
+													<span>[디자인문구 | 필기구]</span>
+													<span class="point02">라미</span>
+													<span>그라파이어 리뉴얼	대한민국 &amp; 독일 수교 20주년 한정판</span>
+												</p>
+												<p class="price">25,000원</p>
+											</span>
+											<span class="thum">
+												<img src="../../images/biz/thums/img_main08.png" alt="">
+											</span>
+										</a>
+									</li>
+								</ul>
+							</div>	
+						</div>
 					</div>
+					<!-- // 210118 슬라이드 수정 : E -->
 
 					<div class="popular_search_wrap">
 						<div class="bxslider">
