--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1041,7 +1041,19 @@ th.row-headers-background {
         <td class="s25"></td>
       </tr>
 
-      <!-- <tr style="height:29px;">
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            201228 작업부분  <br>
+
+            201228 S : 작업부분 <br>
+            // 201228 E : 작업부분 <br></td>
+        </td>
+      </tr>
+
+      <tr style="height:29px;">
         <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s15" dir="ltr" rowspan="6">#Contact<br>
@@ -1095,7 +1107,7 @@ th.row-headers-background {
         <td class="s16">1대1 문의</td>
         <td class="s16"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_listFaq.html">http://devm.hottracks.co.kr/html/new/popup_listFaq.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone.html">http://devm.hottracks.co.kr/html/new/listone.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s18"></td>
       </tr>
@@ -1105,10 +1117,10 @@ th.row-headers-background {
         <td class="s16">팝업</td>
         <td class="s16"></td>
         <td class="s16"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_listFaq.html">http://devm.hottracks.co.kr/html/new/popup_listFaq.html</a></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listone_pop.html">http://devm.hottracks.co.kr/html/new/listone_pop.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s18"></td>
-      </tr> -->
+      </tr>
     </tbody>
   </table>
 </div>
