--- a/PC/html/new/funding_main.html
+++ b/PC/html/new/funding_main.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="../../js/biz/jquery/swiper.min.js"></script>
 <script>
 	$(function(){
+		// 210119 작업부분
 		// 펀딩
         $('.tab_list').on('click', 'a', function(){
         	var $tab = $(this);
@@ -491,22 +492,49 @@
 
 			<!-- 컨텐츠 -->
 			<div class="content" id="content">
-
-                <!-- detail_top -->
-                <div class="detail_top stuff-detail">
-                    <div class="inner">
-                        <!-- Location -->
-                        <div class="location_wrap_v2 mgt20 mgb10">
-                            <a href="#n" class="btn_home">Home</a>
-                            <div class="location_nav_wrap"><a class="location_1" href="#n">펀딩서비스</a></div>
-                            <div class="location_nav_wrap"><a class="location_1" href="#n">핫트딜</a></div>
-                        </div>
-                        <!-- //Location -->
-                    </div>
-                </div>
-                <!-- // detail_top -->
-
+				<!-- 210119 S : 작업부분 -->
                 <div class="funding_main_wrap">
+                	<!-- logo -->
+                	<div class="funding_main_logo_wrap">
+                		<div class="funding_text_wrap">
+                			<h3 class="funding_title">
+	                			<div class="text">핫트랙스와 펀딩이 함께 하는</div>
+	                			<div class="text_icon only_english">핫트딜</div>
+	                		</h3>
+	                		<div class="funding_desc_texts">
+	                			<p class="text">핫트딜 펀딩 참여 후 목표가 달성되면 상품이 최종 구매 완료 됩니다.</p>
+	                			<p class="text mgt5">펀딩(딜)이 성공적으로 종료되면 결제가 완료됩니다.</p>
+	                		</div>	
+                		</div>
+                		<div class="funding_process_wrap">
+                			<ul class="funding_process_list">
+                				<li class="items step1">
+                					<div class="text_wrap">
+                						<div class="unit_text">핫트딜 오픈</div>
+                					</div>
+                				</li>
+                				<li class="items step2">
+                					<div class="text_wrap">
+                						<div class="unit_text">핫트딜 참여</div>
+                					</div>
+                				</li>
+                				<li class="items step3">
+                					<div class="text_wrap">
+                						<div class="unit_text">핫트딜 마감</div>
+                					</div>
+                				</li>
+                				<li class="items step4">
+                					<div class="text_wrap">
+                						<div class="unit_text">배송 시작</div>
+                					</div>
+                				</li>
+                			</ul>
+                		</div>
+                	</div>
+                	<!-- swiper -->
+                	<div></div>
+
+                	<!-- tab -->
                 	<div class="tab1 tab_wrap">
                         <ul class="tab_list"> 
                             <li class="items"><a href="javascript:;" class="on"><span>핫트딜ING</span></a></li>
@@ -548,6 +576,7 @@
 					    </div>
                     </div>
                 </div>
+				<!--// 210119 E : 작업부분 -->
             </div>
             <!-- // 컨텐츠 -->
             
